<resources>
    <string name="app_name" translatable="false">Qwark</string>
    <string name="add">Add</string>
    <string name="field_empty">Field must not be left empty</string>
    <string name="delete">Delete</string>
    <string name="confirm_action">Confirm action</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="finish">Finish</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="general">General</string>
    <string name="alert_create_school_year_title">Create a school year</string>
    <string name="alert_create_school_year_desc">Before adding courses and final grades, please do make sure to go into the settings and create a school year and a score profile!</string>
    <string name="to_be_implemented">To be implemented</string>
    <string name="powered_by_qwark" translatable="false">Powered by Qwark</string>
    <string name="made_by_deniz" translatable="false">Made by Deniz</string>
    <string name="exams">Exams</string>
    <string name="exam_reminder">Exam reminder: %s</string>
    <string name="writing_an_exam_today">You\'re writing an exam in %s today!</string>
    <string name="exam_service_description">Sends notifications for upcoming exams</string>
    <string-array name="greetings">
        <item>Hello %s!</item>
        <item>Hi %s!</item>
        <item>Hope you\'re doing well, %s.</item>
    </string-array>
    <string name="course">Course</string>
    <string name="courses">Courses</string>
    <string name="your_courses">Your Courses</string>
    <string name="current_average">Current average: %s</string>
    <string name="current_total_average">Current total average: %s</string>
    <string name="no_school_year_selected">No school year selected</string>
    <string name="no_grades_entered_placeholder">No grades entered for %s</string>
    <string name="add_course">Add course</string>
    <string name="name">Name</string>
    <string name="advanced">Advanced</string>
    <string name="pick_icon">Pick an icon</string>
    <string name="options_for_course">Options for %s</string>
    <string name="historical_data_for_course">Historical data for %s</string>
    <string name="edit_course">Edit course</string>
    <string name="view_historical_data">View historical data</string>
    <string name="delete_course_and_data">Delete course and associated data</string>
    <string name="delete_course_and_data_confirmation">Are you sure you want to delete %s and all associated information? This includes all grades and historical data and cannot be undone!</string>
    <string name="average_symbol" translatable="false">Ø: %s</string>
    <string name="average_for_year">Ø for %s: %s</string>
    <string name="average_and_grade_for_year">Ø for %s: %s ≙ %s</string>
    <string name="average_grade_for_year">Ø for %s: Grade %s</string>
    <string name="average_grade_placeholder">Ø: Grade %s</string>
    <string name="advanced_abbreviated_placeholder">%s (Adv.)</string>
    <plurals name="average_points_placeholder">
        <item quantity="one">Ø: %s point</item>
        <item quantity="other">Ø: %s points</item>
    </plurals>
    <string name="average_points_no_grade_placeholder">No grades yet</string>
    <plurals name="exam_weeks_placeholder">
        <item quantity="one">; %s week until exam</item>
        <item quantity="other">; %s weeks until exam</item>
    </plurals>
    <plurals name="exam_days_placeholder">
        <item quantity="one">; %s day until exam</item>
        <item quantity="other">; %s days until exam</item>
    </plurals>
    <string name="exam_today_placeholder">; exam today</string>
    <string name="grade_format_error">Check grade type</string>
    <string name="averages_for_course">Averages for %s</string>
    <string name="grades">Grades</string>
    <string name="your_grades">Your Grades</string>
    <string name="add_grade">Add grade</string>
    <string name="verbal_placeholder">Verbal</string>
    <string name="written_placeholder">Written</string>
    <string name="exam_on_placeholder">; exam on %s</string>
    <string name="verbal">Verbal</string>
    <string name="written">Written</string>
    <string-array name="grades_points" translatable="false">
        <item>15</item>
        <item>14</item>
        <item>13</item>
        <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>09</item>
        <item>08</item>
        <item>07</item>
        <item>06</item>
        <item>05</item>
        <item>04</item>
        <item>03</item>
        <item>02</item>
        <item>01</item>
        <item>00</item>
    </string-array>
    <string-array name="grades_numbers" translatable="false">
        <item>1+</item>
        <item>1</item>
        <item>1-</item>
        <item>2+</item>
        <item>2</item>
        <item>2-</item>
        <item>3+</item>
        <item>3</item>
        <item>3-</item>
        <item>4+</item>
        <item>4</item>
        <item>4-</item>
        <item>5+</item>
        <item>5</item>
        <item>5-</item>
        <item>6</item>
    </string-array>
    <string-array name="grades_letters" translatable="false">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D+</item>
        <item>D</item>
        <item>D-</item>
        <item>E+</item>
        <item>E</item>
        <item>E-</item>
        <item>F</item>
    </string-array>
    <string name="grade">Grade</string>
    <string name="weighting">Weighting</string>
    <string name="weighting_above_hundred">Weighting must not exceed 100%</string>
    <string name="confirm_grade_deletion">Are you sure you want to delete this grade?</string>
    <string name="edit_grade">Edit grade</string>
    <string name="exam">Exam</string>
    <string name="exam_date">Exam date (yyyy-mm-dd)</string>
    <string name="date_format_issue">This date can\'t be parsed</string>
    <string name="exam_past_issue">Passed exams must have a grade associated</string>
    <string name="open_participation_fragment">View participation</string>
    <string name="notes">Notes</string>
    <string name="your_notes">Your Notes</string>
    <string name="created_at">Created: %s</string>
    <string name="add_note">Add note</string>
    <string name="content">Content</string>
    <string name="category">Category</string>
    <string name="options_for_note">Options for note</string>
    <string name="confirm_note_deletion">Are you sure you want to delete this note?</string>
    <string name="uncategorized_brackets">(Uncategorized)</string>
    <string name="edit_note">Edit note</string>
    <string name="view_notes_for_category">View all notes for category \'%s\'</string>
    <string name="delete_note">Delete note</string>
    <string name="mark_note_done">Mark note as done</string>
    <string name="mark_note_undone">Undo marking note as done</string>
    <string name="note_dismissed">(Dismissed)\n\n%s</string>
    <string name="quotation_marks" translatable="false">\'%s\'</string>
    <string name="participation">Participation</string>
    <string name="your_participation">Your Participation</string>
    <string name="link_course">Link course</string>
    <string name="confirm_remove_participation_link">Are you sure you want to remove this link to %s on %s? This will not delete any participations.</string>
    <string name="start_class_session">Start class session</string>
    <string name="participation_placeholder">Hand raised: %s, spoken: %s</string>
    <string name="participation_ratio_desc">Hand raised : Spoken</string>
    <string name="delete_participation_confirmation">Are you sure you want to delete this participation?</string>
    <string name="class_session">Class Session</string>
    <string name="class_session_resumed">Class Session (resumed)</string>
    <string name="long_press_to_cancel">Long-press to cancel</string>
    <string name="long_press_to_finish">Long-press to finish</string>
    <string name="open_grade_fragment">View course</string>
    <string name="participation_too_old">Participation too old to be resumed</string>
    <string name="participation_resumable">" (resumable)"</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string name="finals">Finals</string>
    <string name="your_final_score">Your Finals</string>
    <string name="score_profile_template">Score for %s</string>
    <string name="no_score_profile_selected">No score profile selected</string>
    <string name="options_for_final_grade">Options for %s</string>
    <string name="final_grade">final grade</string>
    <string name="basic_courses">Basic courses</string>
    <string name="adv_courses">Advanced courses</string>
    <string name="final_exams">Finals</string>
    <string name="edit_final_grade">Edit final grade</string>
    <string name="link_final_grade">Link course</string>
    <string name="view_linked_course">View linked course</string>
    <string name="clear_final_grade">Clear final grade</string>
    <string name="clear_final_grade_desc">Are you sure you want to clear this %s grade?</string>
    <string name="clear_final_grade_error">Grade cannot be cleared; is already empty</string>
    <string name="pick_a_year">Pick a school year</string>
    <string name="pick_a_course">Pick a course</string>
    <string name="conversion_table">Conversion table</string>
    <string name="points_to_grade_conversion_title">Points to grade conversion table</string>
    <string name="points_to_grade_conversion" translatable="false">900 – 823 → 1.0\n822 – 805 → 1.1\n804 – 787 → 1.2\n786 – 769 → 1.3\n768 – 751 → 1.4\n750 – 733 → 1.5\n732 – 715 → 1.6\n714 – 697 → 1.7\n696 – 679 → 1.8\n678 – 661 → 1.9\n660 – 643 → 2.0\n\n642 – 625 → 2.1\n624 – 607 → 2.2\n606 – 589 → 2.3\n588 – 571 → 2.4\n570 – 553 → 2.5\n552 – 535 → 2.6\n534 – 517 → 2.7\n516 – 499 → 2.8\n498 – 481 → 2.9\n480 – 463 → 3.0\n\n462 – 445 → 3.1\n444 – 427 → 3.2\n426 – 409 → 3.3\n408 – 391 → 3.4\n390 – 373 → 3.5\n372 – 355 → 3.6\n354 – 337 → 3.7\n336 – 319 → 3.8\n318 – 301 → 3.9\n300 → 4.0</string>
    <string name="approximate_placeholder" translatable="false">≈ %s</string>
    <string name="settings">Settings</string>
    <string name="set_exam_notification_time">Set exam notification time</string>
    <string name="exam_notification_time_placeholder">Currently set to %s</string>
    <string name="course_sort_type">Sort courses by</string>
    <string-array name="course_sort_type_options">
        <item>Time added (ascending)</item>
        <item>Time added (descending)</item>
        <item>Name (ascending)</item>
        <item>Name (descending)</item>
        <item>Advanced / basic</item>
        <item>Basic / advanced</item>
        <item>Average (ascending)</item>
        <item>Average (descending)</item>
        <item>Next exam</item>
    </string-array>
    <string name="dark_mode">App theme</string>
    <string-array name="dark_mode_options">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow system</item>
    </string-array>
    <string name="show_grade_average_title">Show grade average in course selector</string>
    <string name="show_grade_average_desc">Only applies to point averages</string>
    <string name="grade_type_title">Grade type</string>
    <string name="score_profile">Score profile</string>
    <string name="add_score_profile">Add score profile</string>
</resources>