<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/courses"
        android:icon="@drawable/list"
        android:title="@string/courses"
        android:enabled="true"/>
    <item
        android:id="@+id/notes"
        android:icon="@drawable/notepad"
        android:title="@string/notes"
        android:enabled="true"/>
    <item
        android:id="@+id/participation"
        android:icon="@drawable/hand"
        android:title="@string/participation"
        android:enabled="true"/>
    <item
        android:id="@+id/finals"
        android:icon="@drawable/ic_help"
        android:title="@string/finals"
        android:enabled="true"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/cogwheel"
        android:title="@string/settings"
        android:enabled="true"/>
</menu>