<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBackground"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="22sp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/add_course"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            android:textColorHint="@color/colorHint"
            android:importantForAutofill="no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapWords"
                android:importantForAutofill="no"
                android:textColor="@color/colorText"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:hint="@string/verbal"
                android:textColorHint="@color/colorHint"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oral_weighting_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:imeOptions="flagNoExtractUi"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:hint="@string/written"
                android:textColorHint="@color/colorHint"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/written_weighting_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:imeOptions="flagNoExtractUi"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:tint="@color/colorText"
                android:scaleType="centerInside"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/pick_icon"
                android:textColor="@color/colorAccent"
                app:cornerRadius="12dp"
                app:rippleColor="@color/colorAccent"/>

        </LinearLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/advanced_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:text="@string/advanced"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton
                style="@style/NegativeActionTextButton"
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/create_button"
                app:strokeWidth="2dp"
                app:strokeColor="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/create"
                app:rippleColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>