<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground"
    android:paddingTop="16dp"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/add_note"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/content"
        android:textColorHint="@color/colorHint"
        android:importantForAutofill="no">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:maxLines="8"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textMultiLine"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/category"
        android:textColorHint="@color/colorHint"
        android:importantForAutofill="no">

        <com.google.android.material.textview.MaterialAutoCompleteTextView
            android:id="@+id/category_drop_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:maxLines="1"
            android:maxLength="24"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textNoSuggestions"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            style="@style/NegativeActionTextButton"
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/create_button"
            app:strokeWidth="2dp"
            app:strokeColor="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/create"
            app:rippleColor="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>