<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="22sp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/pick_icon"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:paddingVertical="8dp"
            android:clipToPadding="false"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/cancel_button"
                android:textColor="@color/colorWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                app:cornerRadius="@dimen/cardCornerRadius"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/confirm_button"
                app:strokeWidth="2dp"
                app:strokeColor="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="24dp"
                android:text="@string/confirm"
                app:cornerRadius="@dimen/cardCornerRadius"
                app:rippleColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>