<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/options_for_note"
        android:fontFamily="@font/manrope_semibold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <LinearLayout
        android:id="@+id/update_dismissed_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        style="@style/SelectableItemBackground">

        <ImageView
            android:id="@+id/dismissed_image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/label_dismissed"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/dismissed_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="15sp"
            android:text="@string/mark_note_done"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        style="@style/SelectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/filter"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/view_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_note_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        style="@style/SelectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/edit"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="15sp"
            android:text="@string/edit_note"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_note_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical"
        style="@style/SelectableItemBackgroundWarning"
        android:layout_marginBottom="8dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/delete"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:textSize="15sp"
            android:text="@string/delete_note"/>

    </LinearLayout>

</LinearLayout>